<resources>
    <string name="app_name">Natlex test task</string>
    <string name="activity_isnt_navigation_router_error_msg">MainActivity должна иметь тип NavigationRouter</string>
    <string name="empty_value">---</string>
    <string name="celsius_switch_label">C</string>
    <string name="fahrenheit_switch_label">F</string>
    <string name="menu_title_search_by_name">Weather search by location name</string>
    <string name="menu_title_search_by_coords">Weather search by location coords</string>
    <string name="searching_item_location_name_example">Moscow,\ </string>
    <string name="searching_item_temp_value_example">25° C</string>
    <string name="searching_item_date_example">01.01.2022 12:00:00</string>
    <string name="max_temp_example">max: 30° C</string>
    <string name="min_temp_example">mix: 20° C</string>
    <string name="temp_graph_icon">Temp_graph_icon</string>
    <string name="search_view_hint">Введите название города</string>
    <string name="weather_value_in_celsius">%1s° C</string>
    <string name="weather_value_in_fahrenheit">%1s° F</string>
    <string name="max_temp_value_in_celsius">max: %1s° C</string>
    <string name="min_temp_value_in_celsius">min: %1s° C</string>
    <string name="max_temp_value_in_fahrenheit">max: %1s° F</string>
    <string name="min_temp_value_in_fahrenheit">min: %1s° F</string>
    <string name="weather_list_item_location_name">%1s,\ </string>
    <string name="alert_dialog_negative_button_permission_rationale">Отклонить</string>
    <string name="alert_dialog_positive_button_permission_rationale">Разрешить</string>
    <string name="alert_dialog_message_permission_rationale">Здесь будет убедительное сообщение, что пользователю необходимо разрешить доступ к местоположению</string>
    <string name="alert_dialog_title_permission_rationale">Предупреждение</string>
    <string name="default_alert_title">Сообщение</string>
    <string name="default_alert_positive_button">OK</string>
    <string name="unable_to_turn_location_on">Включен "Режим полета", либо на данном устройстве отсутствуют настройки определения местоположения</string>
    <string name="alert_message_if_location_is_off">При выключенном определении местоположения функция получения данных о погоде по местоположению работать не будет</string>
    <string name="alert_message_if_internet_is_off">Проверьте подключение к WI-FI или сотовой сети</string>
    <string name="alert_title_if_internet_is_off">Отсутствует интернет-соединение</string>
    <string name="default_alert_negative_button">Отменить</string>
    <string name="argument_error">Ошибка передачи аргумента</string>
    <string name="filter_data_hint">Данные за период:\nот %1s\nдо %2s</string>
</resources>