<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_layout_padding">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content">


    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_weather_layout"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/zero"
        android:padding="@dimen/default_layout_padding"
        app:layout_constraintBottom_toTopOf="@id/weather_history_recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <TextView
            android:id="@+id/location_name_text_view"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:maxLines="2"
            android:text="@string/empty_value"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/temperature_text_view"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_4dp"
            android:autoSizeTextType="uniform"
            android:maxLines="2"
            android:text="@string/empty_value"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/fahrenheit_switch_label_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location_name_text_view"
            app:layout_constraintVertical_bias="1" />

        <TextView
            android:id="@+id/celsius_switch_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/celsius_switch_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constraintBottom_toBottomOf="@id/fahrenheit_switch_label_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/fahrenheit_switch_label_text_view" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/weather_units_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_4dp"
            app:layout_constraintBottom_toBottomOf="@id/fahrenheit_switch_label_text_view"
            app:layout_constraintEnd_toStartOf="@id/celsius_switch_label_text_view"
            app:layout_constraintTop_toTopOf="@id/fahrenheit_switch_label_text_view" />

        <TextView
            android:id="@+id/fahrenheit_switch_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_4dp"
            android:text="@string/fahrenheit_switch_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constraintBaseline_toBaselineOf="@id/temperature_text_view"
            app:layout_constraintEnd_toStartOf="@id/weather_units_switch"
            app:layout_constraintTop_toTopOf="@id/celsius_switch_label_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/weather_history_recycler_view"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/zero"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_weather_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>